k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: martins984/inventory-backend:latest  # Must match your local tag exactly
          imagePullPolicy: Always       # CRITICAL: Forces K8s to use the local image
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort  # Exposes the service outside the cluster (for testing)
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000       # The port the cluster uses internally
      targetPort: 5000 # The port the container is listening on
      nodePort: 30001  # Static port so we can access it easily from Windows
