k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: martins984/inventory-frontend:latest # Uses the image inside Minikube
          imagePullPolicy: Always
          ports:
            - containerPort: 80        # Nginx listens on 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80         # Cluster port
      targetPort: 80   # Container port
      nodePort: 30002  # Static port for browser access
